fix(guide) rotate guide section icon on expand/collapse

--- a/site/web/app/themes/fiipregatit/resources/assets/styles/layouts/_guide.scss
+++ b/site/web/app/themes/fiipregatit/resources/assets/styles/layouts/_guide.scss
@@ -46,7 +46,7 @@
   margin-right: 15px;
 }
 
-#guide-content #accordion .card-header svg {
+#guide-content #accordion .card-header i {
   transition: 0.3s transform ease-in-out;
   float: right;
   transform: rotate(180deg);
